# Invoicing

./: .cursor-shell-init.sh  .vercelignore  AI_CHAT_IMPLEMENTATION_SUMMARY.md  AI_CHAT_SETUP.md  AI_IMPLEMENTATION_GUIDE.md  AI_Invoice.md  AI_Pre_Login.md  API_DOCUMENTATION.md  API_MIGRATION_PLAN.md  AUDIT_LOGGING.md  Additiona.md  BUILD_FIX.md  BUILD_SUCCESS.md  CHAT_UI_CHECKLIST.md  CHAT_UI_REDESIGN_SUMMARY.md  CHAT_UI_VISUAL_GUIDE.md  CLEANUP_SUMMARY.md  Invoice_format.md  QUICKSTART_AI_CHAT.md  README.md  README_ROUTE_ANALYSIS.md  ROUTE_MAP.md  ROUTE_QUICK_REFERENCE.md  ROUTE_TRACKING.md  TRANSACTIONAL_INTEGRITY_FIX.md  TROUBLESHOOTING.md  audit.md  customer.md  features.md  invoice.md  invoice_T&C.md  invoice_update.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  profile.md  purchases.md  push_notifications.md  repomix-output.xml  (+6 more)
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
components/: auth-provider.tsx  header.tsx  route-logger.tsx  route-visualizer.tsx  sidebar-toggle.tsx  theme-provider.tsx  user-nav.tsx
desktop/: GETTING_STARTED.md  IMPLEMENTATION_GUIDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
desktop/src-tauri/src/database/: mod.rs  operations.rs  schema.rs
desktop/src-tauri/src/file_storage/: images.rs  mod.rs
docs/: AI_HARDENING_SUMMARY.md  AI_SECURITY.md
hooks/: useVoiceInput.ts  useVoiceRecorder.ts
lib/: audit-logger.ts  audit-types.ts  database.types.ts  imageUtils.ts  invoice-text.ts  logger.ts  storage-utils.ts  supabase-server.ts  (+3 more)
(+170 files in other folders)
