[package]
name = "jewelry-inventory-desktop"
version = "0.1.0"
description = "Local-first jewelry inventory management system"
authors = ["Jewelry Inventory Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jewelry_inventory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.33", features = ["bundled", "uuid", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Image processing
image = { version = "0.25", features = ["jpeg", "png", "webp"] }

# HTTP client (for OpenAI API)
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"

# Keychain for API key storage
keyring = "3.6"

# PDF generation
printpdf = "0.7"

# QR code generation
qrcode = "0.14"

